#ScriptLibrary

v1.0.0
~ Initial release

v1.0.1 -- Current Published Version
~ Added: jp.lib.FindStationToEquipAt.xml
~ Added: Some often used translations.
~ Fixed: The 'IdleReturnHome' feature was not functioning when no option was selected. It now defaults to 'Idle: Move to?' using either the position and sector stored in their settings or the position and sector where the ship initiated the script.
~ Fixed: The script that cancels the Idle task now removes only the orders generated by the Idle order itself.
~ Fixed: The 'Find Station' function now performs a search for stations only when enabled.
~ Changed: The 'Find Station' function now organizes its findings by estimated travel time.
~ Changed: "jp.lib.Restock" is now "jp.lib.RestockEquipment," with some improvements to its logic.
~ Updated: Several minor enhancements have been made to the code and translations.

v1.0.2 -- Current Development Version
~ Added: jp.lib.ConvertARGBtoHex.xml
~ Added: jp.lib.GetFactionColorCode.xml
~ Added: jp.lib.GetFactionRelationColorCode.xml